# fast_api_playground

./: pyproject.toml  requirements.txt  settings.yml
lb_tuto/: api.py
